<resources>
    <string name="app_name">CarParking</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_up">Sign up</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_stud_profile">Profile</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email"</string>
    <string name="sign_up_as">Sign up as</string>
    <string name="add_task_dialog_title">Add Task</string>
    <string name="student_job_dialog">studentDilaogDetail</string>
    <string name="company_job_dialog">companyDilaogDetail</string>
    <string name="company_appplied_ob_dialog">appliedStudentOnJob</string>
    <string name="canidate_node">canidate</string>
    <string name="details_node">details</string>
    <string name="tudent_profile_name">Name</string>
    <string name="tudent_profile_semister">Semister</string>
    <string-array name="sign_up_type">
        <item>Student</item>
        <item>Company</item>
    </string-array>
    <string-array name="job_type">
        <item>IT</item>
        <item>Bussiness</item>
    </string-array>

    <string-array name="dash_type">
        <item>New Jobs</item>
        <item>Applied</item>
    </string-array>
    <string name="title_activity_student_applied">StudentAppliedActivity</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
